add rotation for primary backend cron scripts

--- a/etc/logrotate.conf
+++ b/etc/logrotate.conf
@@ -5,3 +5,5 @@ rotate 9
 notifempty
 
 /opt/projects/cpantesters/release/logs/release.log { }
+/opt/projects/cpantesters/cron/*.log { }
+/opt/projects/cpantesters/cron/*.out { }
