use mod_remoteip for proxy instead of custom log
mod_remoteip handles the conditional translation of X-Forwarded-For for
us so we don't have to!

--- a/etc/apache2/vhost/300-cpantesters.conf
+++ b/etc/apache2/vhost/300-cpantesters.conf
@@ -13,8 +13,7 @@
     RemoveHandler .cgi .pl
 
     ErrorLog /var/www/logs/cpan-error.log
-    CustomLog /var/www/logs/cpan-access.log combined env=!forwarded
-    CustomLog /var/www/logs/cpan-access.log proxy env=forwarded
+    CustomLog /var/www/logs/cpan-access.log combined
 </VirtualHost>
 
 <VirtualHost 212.110.173.51:80>
@@ -30,8 +29,7 @@
     RemoveHandler .cgi .pl
 
     ErrorLog /var/www/logs/backpan-error.log
-    CustomLog /var/www/logs/backpan-access.log combined env=!forwarded
-    CustomLog /var/www/logs/backpan-access.log proxy env=forwarded
+    CustomLog /var/www/logs/backpan-access.log combined
 </VirtualHost>
 
 <VirtualHost 212.110.173.51:80>
@@ -39,8 +37,7 @@
     ServerAdmin barbie@missbarbell.co.uk
     DocumentRoot /var/www/reports/html/stats
     ErrorLog /var/www/logs/cpanpass-error.log
-    CustomLog /var/www/logs/cpanpass-access.log combined env=!forwarded
-    CustomLog /var/www/logs/cpanpass-access.log proxy env=forwarded
+    CustomLog /var/www/logs/cpanpass-access.log combined
 </VirtualHost>
 
 <VirtualHost 212.110.173.51:80>
@@ -50,8 +47,7 @@
     ScriptAlias /cgi-bin/                /var/www/cpanstats/cgi-bin/
     Options +ExecCGI
     ErrorLog /var/www/logs/cpanstats-error.log
-    CustomLog /var/www/logs/cpanstats-access.log combined env=!forwarded
-    CustomLog /var/www/logs/cpanstats-access.log proxy env=forwarded
+    CustomLog /var/www/logs/cpanstats-access.log combined
 </VirtualHost>
 
 <VirtualHost 212.110.173.51:80>
@@ -59,8 +55,7 @@
     ServerAdmin barbie@missbarbell.co.uk
     DocumentRoot /var/www/cpandevel
     ErrorLog /var/www/logs/cpandevel-error.log
-    CustomLog /var/www/logs/cpandevel-access.log combined env=!forwarded
-    CustomLog /var/www/logs/cpandevel-access.log proxy env=forwarded
+    CustomLog /var/www/logs/cpandevel-access.log combined
 </VirtualHost>
 
 <VirtualHost 212.110.173.51:80>
@@ -70,8 +65,7 @@
     RedirectMatch permanent .* https://prefs.cpantesters.org
 
     ErrorLog /var/www/logs/cpanprefs-error.log
-    CustomLog /var/www/logs/cpanprefs-access.log combined env=!forwarded
-    CustomLog /var/www/logs/cpanprefs-access.log proxy env=forwarded
+    CustomLog /var/www/logs/cpanprefs-access.log combined
 </VirtualHost>
 
 <VirtualHost 212.110.173.51:80>
@@ -95,8 +89,7 @@
     RewriteRule (fckeditor)                     /404.html [L,R=404]
 
     ErrorLog /var/www/logs/static-error.log
-    CustomLog /var/www/logs/static-access.log combined env=!forwarded
-    CustomLog /var/www/logs/static-access.log proxy env=forwarded
+    CustomLog /var/www/logs/static-access.log combined
 </VirtualHost>
 
 <VirtualHost 212.110.173.51:80>
@@ -150,8 +143,7 @@
     #Options +ExecCGI
 
     ErrorLog /var/www/logs/reports-error.log
-    CustomLog /var/www/logs/reports-access.log combined env=!forwarded
-    CustomLog /var/www/logs/reports-access.log proxy env=forwarded
+    CustomLog /var/www/logs/reports-access.log combined
 </VirtualHost>
 
 <VirtualHost 212.110.173.51:80>
@@ -161,7 +153,6 @@
     DocumentRoot /var/www/downtime
 
     ErrorLog /var/www/logs/downtime-error.log
-    CustomLog /var/www/logs/downtime-access.log combined env=!forwarded
-    CustomLog /var/www/logs/downtime-access.log proxy env=forwarded
+    CustomLog /var/www/logs/downtime-access.log combined
 </VirtualHost>
 
