start work on distributed monitoring
This way, the cpantesters machine can monitor itself and report back to
the master for configuration updates and information dumps.

--- a/etc/monitor/icinga/cpantesters.conf
+++ b/etc/monitor/icinga/cpantesters.conf
@@ -1,6 +1,10 @@
 
 /**********************************************************************
- * CPAN Testers monitoring
+ * CPAN Testers monitoring -- master
+ *
+ * This configuration sends out check configs to the clients so they
+ * can operate independently if the master goes away.
+ *
  *********************************************************************/
 
 /***********************************
@@ -17,6 +21,27 @@ object User "doug" {
     groups = [ "cpantestersadmins" ]
 
     email = "doug@preaction.me"
+}
+
+/***********************************
+ * Zones and Endpoints
+ **********************************/
+
+object Endpoint 'monitor.preaction.me' {
+    host = '199.38.182.146'
+}
+
+object Endpoint 'cpantesters3.dh.bytemark.co.uk' {
+    host = '212.110.173.51'
+}
+
+object Zone 'master' {
+    endpoints = [ 'monitor.preaction.me' ]
+}
+
+object Zone 'clients' {
+    endpoints = [ 'cpantesters3.dh.bytemark.co.uk' ]
+    parent = "master"
 }
 
 /***********************************
