--- a/etc/apache2/vhost/cpantesters.org.conf
+++ b/etc/apache2/vhost/cpantesters.org.conf
@@ -1,36 +1,7 @@
-#NameVirtualHost 212.110.173.51
 
-<VirtualHost 212.110.173.51:80>
-    ServerName cpan.cpantesters.org
-    ServerAdmin barbie@missbarbell.co.uk
-    DocumentRoot /home/ftp/CPAN
-    <Directory /home/ftp/CPAN>
-        Options +Indexes
-        Require all granted
-    </Directory>
-
-    # Disable CGI scripts
-    RemoveHandler .cgi .pl
-
-    ErrorLog /var/www/logs/cpan-error.log
-    CustomLog /var/www/logs/cpan-access.log combined
-</VirtualHost>
-
-<VirtualHost 212.110.173.51:80>
-    ServerName backpan.cpantesters.org
-    ServerAdmin barbie@missbarbell.co.uk
-    DocumentRoot /home/ftp/BACKPAN
-    <Directory /home/ftp/BACKPAN>
-        Options +Indexes
-        Require all granted
-    </Directory>
-
-    # Disable CGI scripts
-    RemoveHandler .cgi .pl
-
-    ErrorLog /var/www/logs/backpan-error.log
-    CustomLog /var/www/logs/backpan-access.log combined
-</VirtualHost>
+# This config file contains all the sites for the CPAN Testers
+# application. Disabling this config will disable CPAN Testers (like,
+# for scheduled maintenance)
 
 <VirtualHost 212.110.173.51:80>
     ServerName pass.cpantesters.org
@@ -146,13 +117,50 @@
     CustomLog /var/www/logs/reports-access.log combined
 </VirtualHost>
 
-<VirtualHost 212.110.173.51:80>
-    ServerName test.cpantesters.org
-    ServerAlias *.cpantesters.org
+<VirtualHost 212.110.173.51:443>
+    ServerName prefs.cpantesters.org
     ServerAdmin barbie@missbarbell.co.uk
-    DocumentRoot /var/www/downtime
+    DocumentRoot /var/www/cpanprefs/html
 
-    ErrorLog /var/www/logs/downtime-error.log
-    CustomLog /var/www/logs/downtime-access.log combined
+    SSLEngine on
+    SSLCertificateFile      /etc/apache2/ssl/prefs/prefs_cpantesters_org.crt
+    SSLCertificateKeyFile   /etc/apache2/ssl/prefs/prefs.cpantesters.org.key
+    SSLCertificateChainFile /etc/apache2/ssl/prefs/prefs.cpantesters.org.ca-bundle
+
+    RewriteEngine on
+    RewriteRule ^.*(php)$    /cgi-bin/pages.cgi?act=error-badcmd [PT]
+    RewriteRule ^/?$         /cgi-bin/pages.cgi [PT]
+    ScriptAlias /cgi-bin/    /var/www/cpanprefs/cgi-bin/
+    Options +ExecCGI
+    ErrorLog /var/www/logs/cpanprefs-error.log
+    CustomLog /var/www/logs/cpanprefs-access.log combined
+</VirtualHost>
+
+<VirtualHost 212.110.173.51:443>
+    ServerName admin.cpantesters.org
+    ServerAdmin barbie@missbarbell.co.uk
+    DocumentRoot /var/www/cpanadmin/html
+
+    SSLEngine on
+    SSLCertificateFile      /etc/apache2/ssl/admin/admin_cpantesters_org.crt
+    SSLCertificateKeyFile   /etc/apache2/ssl/admin/admin.cpantesters.org.key
+    SSLCertificateChainFile /etc/apache2/ssl/admin/admin.cpantesters.org.ca-bundle
+
+    RewriteEngine on
+    RewriteRule ^.*(php)$    /cgi-bin/pages.cgi?act=error-badcmd [PT]
+    RewriteRule ^/?$         /cgi-bin/pages.cgi [PT]
+
+    RewriteRule ^/author/testers$                       /cgi-bin/pages.cgi?act=author-testers [PT]
+    RewriteRule ^/author/testers/(.*)$                  /cgi-bin/pages.cgi?act=author-testers&letter=$1 [PT]
+    RewriteRule ^/author/tester/(\d+)$                  /cgi-bin/pages.cgi?act=author-tester&testerid=$1 [PT]
+    RewriteRule ^/author/tester/(\d+)/(prev|next)/(.*)$ /cgi-bin/pages.cgi?act=author-tester&testerid=$1&$2=$3 [PT]
+    RewriteRule ^/tester/edit$                          /cgi-bin/pages.cgi?act=tester-edit&%{QUERY_STRING} [PT]
+    RewriteRule ^/(tester|user)(-confirm)/(.*)$         /cgi-bin/pages.cgi?act=$1$2&code=$3 [PT]
+    RewriteRule ^/([a-z]+)\-([a-z]+)/?$                 /cgi-bin/pages.cgi?act=$1-$2 [PT]
+
+    ScriptAlias /cgi-bin/    /var/www/cpanadmin/cgi-bin/
+    Options +ExecCGI
+    ErrorLog /var/www/logs/cpanadmin-error.log
+    CustomLog /var/www/logs/cpanadmin-access.log combined
 </VirtualHost>
 
