remove catchall from cpantesters.org
Having a catchall not only makes it harder to write configs (forcing
them to be loaded in a specific order), but it also makes it harder to
deal with bad links (indeed, no link can be bad, which lowers search
rankings and does other crazy stuff)

--- a/etc/apache2/vhost/cpantesters.org.conf
+++ b/etc/apache2/vhost/cpantesters.org.conf
@@ -65,8 +65,7 @@
 
 <VirtualHost 212.110.173.51:80>
     ServerName reports.cpantesters.org
-    ServerAlias www.cpantesters.org cpantesters.org
-    ServerAlias *.cpantesters.org reports.grango.org
+    ServerAlias www.cpantesters.org cpantesters.org reports.grango.org
     ServerAdmin barbie@missbarbell.co.uk
     DocumentRoot /var/www/reports/html
 
