remove explicit IP from virtualhost
VirtualHost *:80 allows us to respond to all IPs and helps Apache not be
confused when intermingling * and an explicit IP

--- a/etc/apache2/vhost/backpan.cpantesters.org.conf
+++ b/etc/apache2/vhost/backpan.cpantesters.org.conf
@@ -2,7 +2,7 @@
 # This backpan site is used by neilb's CPAN reports
 # (http://neilb.org/cpan-regulars/)
 
-<VirtualHost 212.110.173.51:80>
+<VirtualHost *:80>
     ServerName backpan.cpantesters.org
     ServerAdmin barbie@missbarbell.co.uk
     DocumentRoot /home/ftp/BACKPAN
