--- a/etc/apache2/vhost/cpantesters.org.conf
+++ b/etc/apache2/vhost/cpantesters.org.conf
@@ -3,7 +3,7 @@
 # application. Disabling this config will disable CPAN Testers (like,
 # for scheduled maintenance)
 
-<VirtualHost 212.110.173.51:80>
+<VirtualHost *:80>
     ServerName pass.cpantesters.org
     ServerAdmin barbie@missbarbell.co.uk
     DocumentRoot /var/www/reports/html/stats
@@ -11,7 +11,7 @@
     CustomLog /var/www/logs/cpanpass-access.log combined
 </VirtualHost>
 
-<VirtualHost 212.110.173.51:80>
+<VirtualHost *:80>
     ServerName stats.cpantesters.org
     ServerAdmin barbie@missbarbell.co.uk
     DocumentRoot /var/www/cpanstats
@@ -21,7 +21,7 @@
     CustomLog /var/www/logs/cpanstats-access.log combined
 </VirtualHost>
 
-<VirtualHost 212.110.173.51:80>
+<VirtualHost *:80>
     ServerName devel.cpantesters.org
     ServerAdmin barbie@missbarbell.co.uk
     DocumentRoot /var/www/cpandevel
@@ -29,7 +29,7 @@
     CustomLog /var/www/logs/cpandevel-access.log combined
 </VirtualHost>
 
-<VirtualHost 212.110.173.51:80>
+<VirtualHost *:80>
     ServerName prefs.cpantesters.org
     ServerAdmin barbie@missbarbell.co.uk
 
@@ -39,7 +39,7 @@
     CustomLog /var/www/logs/cpanprefs-access.log combined
 </VirtualHost>
 
-<VirtualHost 212.110.173.51:80>
+<VirtualHost *:80>
     ServerName admin.cpantesters.org
     ServerAdmin barbie@missbarbell.co.uk
     DocumentRoot /var/www/cpanadmin/html
@@ -48,7 +48,7 @@
     RewriteRule ^(.*)$		https://admin.cpantesters.org$1 [L,R=301]
 </VirtualHost>
 
-<VirtualHost 212.110.173.51:80>
+<VirtualHost *:80>
     ServerName static.cpantesters.org
     ServerAlias cpantesters.net www.cpantesters.net *.cpantesters.net
     ServerAlias cpantesters.com www.cpantesters.com *.cpantesters.com
@@ -63,7 +63,7 @@
     CustomLog /var/www/logs/static-access.log combined
 </VirtualHost>
 
-<VirtualHost 212.110.173.51:80>
+<VirtualHost *:80>
     ServerName reports.cpantesters.org
     ServerAlias www.cpantesters.org cpantesters.org reports.grango.org
     ServerAdmin barbie@missbarbell.co.uk
