--- a/etc/apache2/vhost/perl.org.conf
+++ b/etc/apache2/vhost/perl.org.conf
@@ -1,6 +1,4 @@
-#NameVirtualHost 212.110.173.51:80
-
-<VirtualHost 212.110.173.51:80>
+<VirtualHost *:80>
     ServerName cpantesters.perl.org
     ServerAdmin barbie@missbarbell.co.uk
     DocumentRoot /var/www/downtime
@@ -11,7 +9,7 @@
     CustomLog /var/www/logs/perlorg-access.log combined
 </VirtualHost>
 
-<VirtualHost 212.110.173.51:80>
+<VirtualHost *:80>
     ServerName testers.cpan.org
     ServerAdmin barbie@missbarbell.co.uk
     DocumentRoot /var/www/downtime
@@ -21,4 +19,3 @@
     ErrorLog /var/www/logs/cpanorg-error.log
     CustomLog /var/www/logs/cpanorg-access.log combined
 </VirtualHost>
-
