remove other catchalls
I really ought to start scanning logs for 404s after these changes...

--- a/etc/apache2/vhost/cpantesters.org.conf
+++ b/etc/apache2/vhost/cpantesters.org.conf
@@ -50,8 +50,8 @@
 
 <VirtualHost *:80>
     ServerName static.cpantesters.org
-    ServerAlias cpantesters.net www.cpantesters.net *.cpantesters.net
-    ServerAlias cpantesters.com www.cpantesters.com *.cpantesters.com
+    ServerAlias cpantesters.net www.cpantesters.net
+    ServerAlias cpantesters.com www.cpantesters.com
     ServerAdmin barbie@missbarbell.co.uk
     DocumentRoot /var/www/reports/html/static
 
