switch httpd admin to admin@cpantesters.org

--- a/etc/apache2/vhost/backpan.cpantesters.org.conf
+++ b/etc/apache2/vhost/backpan.cpantesters.org.conf
@@ -4,7 +4,7 @@
 
 <VirtualHost *:80>
     ServerName backpan.cpantesters.org
-    ServerAdmin barbie@missbarbell.co.uk
+    ServerAdmin admin@cpantesters.org
     DocumentRoot /home/ftp/BACKPAN
     <Directory /home/ftp/BACKPAN>
         Options +Indexes
