--- a/etc/apache2/vhost/cpan.cpantesters.org.conf
+++ b/etc/apache2/vhost/cpan.cpantesters.org.conf
@@ -1,7 +1,7 @@
 
 <VirtualHost 212.110.173.51:80>
     ServerName cpan.cpantesters.org
-    ServerAdmin barbie@missbarbell.co.uk
+    ServerAdmin admin@cpantesters.org
     DocumentRoot /home/ftp/CPAN
     <Directory /home/ftp/CPAN>
         Options +Indexes
