--- a/etc/apache2/vhost/cpantesters.org.conf
+++ b/etc/apache2/vhost/cpantesters.org.conf
@@ -5,7 +5,7 @@
 
 <VirtualHost *:80>
     ServerName pass.cpantesters.org
-    ServerAdmin barbie@missbarbell.co.uk
+    ServerAdmin admin@cpantesters.org
     DocumentRoot /var/www/reports/html/stats
     ErrorLog /var/www/logs/cpanpass-error.log
     CustomLog /var/www/logs/cpanpass-access.log combined
@@ -13,7 +13,7 @@
 
 <VirtualHost *:80>
     ServerName stats.cpantesters.org
-    ServerAdmin barbie@missbarbell.co.uk
+    ServerAdmin admin@cpantesters.org
     DocumentRoot /var/www/cpanstats
     ScriptAlias /cgi-bin/                /var/www/cpanstats/cgi-bin/
     Options +ExecCGI
@@ -23,7 +23,7 @@
 
 <VirtualHost *:80>
     ServerName devel.cpantesters.org
-    ServerAdmin barbie@missbarbell.co.uk
+    ServerAdmin admin@cpantesters.org
     DocumentRoot /var/www/cpandevel
     ErrorLog /var/www/logs/cpandevel-error.log
     CustomLog /var/www/logs/cpandevel-access.log combined
@@ -31,7 +31,7 @@
 
 <VirtualHost *:80>
     ServerName prefs.cpantesters.org
-    ServerAdmin barbie@missbarbell.co.uk
+    ServerAdmin admin@cpantesters.org
 
     RedirectMatch permanent .* https://prefs.cpantesters.org
 
@@ -41,7 +41,7 @@
 
 <VirtualHost *:80>
     ServerName admin.cpantesters.org
-    ServerAdmin barbie@missbarbell.co.uk
+    ServerAdmin admin@cpantesters.org
     DocumentRoot /var/www/cpanadmin/html
 
     RewriteEngine on
@@ -52,7 +52,7 @@
     ServerName static.cpantesters.org
     ServerAlias cpantesters.net www.cpantesters.net
     ServerAlias cpantesters.com www.cpantesters.com
-    ServerAdmin barbie@missbarbell.co.uk
+    ServerAdmin admin@cpantesters.org
     DocumentRoot /var/www/reports/html/static
 
     RewriteEngine on
@@ -66,7 +66,7 @@
 <VirtualHost *:80>
     ServerName reports.cpantesters.org
     ServerAlias www.cpantesters.org cpantesters.org reports.grango.org
-    ServerAdmin barbie@missbarbell.co.uk
+    ServerAdmin admin@cpantesters.org
     DocumentRoot /var/www/reports/html
 
     ErrorLog /var/www/logs/downtime-error.log
@@ -118,7 +118,7 @@
 
 <VirtualHost 212.110.173.51:443>
     ServerName prefs.cpantesters.org
-    ServerAdmin barbie@missbarbell.co.uk
+    ServerAdmin admin@cpantesters.org
     DocumentRoot /var/www/cpanprefs/html
 
     SSLEngine on
@@ -137,7 +137,7 @@
 
 <VirtualHost 212.110.173.51:443>
     ServerName admin.cpantesters.org
-    ServerAdmin barbie@missbarbell.co.uk
+    ServerAdmin admin@cpantesters.org
     DocumentRoot /var/www/cpanadmin/html
 
     SSLEngine on
