--- a/etc/apache2/vhost/perl.org.conf
+++ b/etc/apache2/vhost/perl.org.conf
@@ -1,6 +1,6 @@
 <VirtualHost *:80>
     ServerName cpantesters.perl.org
-    ServerAdmin barbie@missbarbell.co.uk
+    ServerAdmin admin@cpantesters.org
     DocumentRoot /var/www/downtime
 
     RedirectMatch permanent .* http://static.cpantesters.org
@@ -11,7 +11,7 @@
 
 <VirtualHost *:80>
     ServerName testers.cpan.org
-    ServerAdmin barbie@missbarbell.co.uk
+    ServerAdmin admin@cpantesters.org
     DocumentRoot /var/www/downtime
 
     RedirectMatch permanent .* http://static.cpantesters.org
