--- a/etc/apache2/vhost/cpan.cpantesters.org.conf
+++ b/etc/apache2/vhost/cpan.cpantesters.org.conf
@@ -1,5 +1,5 @@
 
-<VirtualHost 212.110.173.51:80>
+<VirtualHost *:80>
     ServerName cpan.cpantesters.org
     ServerAdmin admin@cpantesters.org
     DocumentRoot /home/ftp/CPAN
