allow apache to proxy websockets to the API

--- a/etc/apache2/vhost/api.cpantesters.org.conf
+++ b/etc/apache2/vhost/api.cpantesters.org.conf
@@ -5,6 +5,14 @@
     DocumentRoot /home/cpantesters
     ErrorLog /var/log/apache2/api-error.log
     CustomLog /var/log/apache2/api-access.log combined
+
+    # Proxy websockets
+    RewriteEngine on
+    RewriteCond %{HTTP:Connection} =Upgrade [NC]
+    RewriteCond %{HTTP:Upgrade} =WebSocket [NC]
+    RewriteRule (.+) ws://127.0.0.1:8000$1 [P]
+
+    # Proxy all other requests
     ProxyPass / http://127.0.0.1:8000/
     ProxyPassReverse / http://127.0.0.1:8000/
 </VirtualHost>
