--- a/monitor/Process-Monitor/dist.ini
+++ b/monitor/Process-Monitor/dist.ini
@@ -11,6 +11,13 @@ version = 0.001
 [AutoPrereqs]
 [MetaProvides::Package]
 [MetaJSON]
+[OurPkgVersion]
+[Test::Kwalitee]
+filename = xt/kwalitee.t
+[ChangelogFromGit]
+file_name = Changes
+max_age = 365
+tag_regexp = ^release-(\d+.*)$
 ; authordep Dist::Zilla::Plugin::AutoPrereqs
 ; authordep Dist::Zilla::Plugin::ChangelogFromGit
 ; authordep Dist::Zilla::Plugin::MetaResources
