Improving log of Apache2
ErrorLog was defined twice for the same virtual host
Added custom fields to ErrorLogFormat
Removed commented configuration

--- a/etc/apache2/vhost/cpantesters.org.conf
+++ b/etc/apache2/vhost/cpantesters.org.conf
@@ -69,10 +69,6 @@
     ServerAdmin admin@cpantesters.org
     DocumentRoot /var/www/reports/html
 
-    ErrorLog /var/www/logs/downtime-error.log
-    #RewriteLog "/var/www/logs/rewrite.log"
-    #RewriteLogLevel 3
-
     RewriteEngine on
     RewriteRule ^.*(asp|php)$                   /cgi-bin/pages.cgi?act=error-badcmd [L,R=404]
     RewriteRule (fckeditor)                     /cgi-bin/pages.cgi?act=error-badcmd [L,R=404]
@@ -105,14 +101,14 @@
     RewriteRule ^/cgi-bin/pages.cgi$            		/cgi-bin/pages.cgi?%{QUERY_STRING} [PT]
     RewriteRule ^/cgi-bin/reports-summary.cgi$  		/cgi-bin/reports-summary.cgi?%{QUERY_STRING} [PT]
     RewriteRule ^/cgi-bin/reports-metadata.cgi$  		/cgi-bin/reports-metadata.cgi?%{QUERY_STRING} [PT]
-    RewriteRule ^/cgi-bin/summary.cgi$  			/cgi-bin/summary.cgi?%{QUERY_STRING} [PT]
+    RewriteRule ^/cgi-bin/summary.cgi$  			    /cgi-bin/summary.cgi?%{QUERY_STRING} [PT]
     RewriteRule ^/cgi-bin/(.*)$                 		/cgi-bin/pages.cgi?act=error-badcmd [PT]
 
     ScriptAlias /cgi-bin/pages.cgi      /var/www/reports/cgi-bin/reports.cgi
     ScriptAlias /cgi-bin/               /var/www/reports/cgi-bin/
-    #Options +ExecCGI
 
     ErrorLog /var/www/logs/reports-error.log
+    ErrorLogFormat "[%t] [%l] %F: %E: [client %a] %M, %-{Referer}i"
     CustomLog /var/www/logs/reports-access.log combined
 </VirtualHost>
 
