preserve host header through proxy to fix urls
It's impossible to build a URL with the correct host if we don't know
the host the user is actually requesting. By preserving the `Host:` HTTP
header, we get the right information. This fixes especially the API
documentation site (http://api.cpantesters.org/docs) to make requests to
the right place.

--- a/etc/apache2/vhost/api.cpantesters.org.conf
+++ b/etc/apache2/vhost/api.cpantesters.org.conf
@@ -13,6 +13,7 @@
     RewriteRule (.+) ws://127.0.0.1:8000$1 [P]
 
     # Proxy all other requests
+    ProxyPreserveHost On
     ProxyPass / http://127.0.0.1:8000/
     ProxyPassReverse / http://127.0.0.1:8000/
 </VirtualHost>
