--- a/etc/apache2/vhost/metabase.cpantesters.org.conf
+++ b/etc/apache2/vhost/metabase.cpantesters.org.conf
@@ -7,6 +7,7 @@
     CustomLog /var/log/apache2/metabase-access.log combined
 
     # Proxy all other requests
+    ProxyPreserveHost On
     ProxyPass / http://127.0.0.1:8250/
     ProxyPassReverse / http://127.0.0.1:8250/
 </VirtualHost>
