add metabase-beta alias for easier testing

--- a/etc/apache2/vhost/metabase.cpantesters.org.conf
+++ b/etc/apache2/vhost/metabase.cpantesters.org.conf
@@ -1,6 +1,7 @@
 
 <VirtualHost *:80>
     ServerName metabase.cpantesters.org
+    ServerAlias metabase-beta.cpantesters.org
     ServerAdmin admin@cpantesters.org
     DocumentRoot /home/cpantesters
     ErrorLog /var/log/apache2/metabase-error.log
