add redirect to provisionally disable static site
This isn't deployed yet by the Rexfile, so it was also made directly on
the server.

Refs #14

--- a/etc/apache2/vhost/cpantesters.org.conf
+++ b/etc/apache2/vhost/cpantesters.org.conf
@@ -59,6 +59,8 @@
     RewriteRule (aspx?|php)$                    /404.html [L,R=404]
     RewriteRule (fckeditor)                     /404.html [L,R=404]
 
+    Redirect permanent / http://www.cpantesters.org
+
     ErrorLog /var/www/logs/static-error.log
     CustomLog /var/www/logs/static-access.log combined
 </VirtualHost>
