increase timeout for api proxy
This might help with @neilb's problems with the API, but it also may be
a larger performance problem with the whole system...

--- a/etc/apache2/vhost/api.cpantesters.org.conf
+++ b/etc/apache2/vhost/api.cpantesters.org.conf
@@ -16,5 +16,6 @@
     ProxyPreserveHost On
     ProxyPass / http://127.0.0.1:8000/
     ProxyPassReverse / http://127.0.0.1:8000/
+    ProxyTimeout 300
 </VirtualHost>
 
