fix telegraf http needing real hostnames
So, instead of being able to handle this all in telegraf, we'll handle
this in DNS using CNAMEs I guess...

--- a/etc/telegraf/http.conf
+++ b/etc/telegraf/http.conf
@@ -11,15 +11,13 @@
     response_timeout="10s"
     method="GET"
 [[inputs.http_response]]
-    address="http://cpantesters3.bytemark.co.uk"
-    server="http://api-1.cpantesters.org"
+    address="http://api-1.cpantesters.org"
     response_timeout="10s"
     method="GET"
     [inputs.http_response.headers]
         Host = "api.cpantesters.org"
 [[inputs.http_response]]
-    address="http://cpantesters1.barnyard.co.uk"
-    server="http://api-2.cpantesters.org"
+    address="http://api-2.cpantesters.org"
     response_timeout="10s"
     method="GET"
     [inputs.http_response.headers]
