add role to create cpan/backpan mirror

--- a/etc/apache2/vhost/backpan.cpantesters.org.conf
+++ b/etc/apache2/vhost/backpan.cpantesters.org.conf
@@ -4,9 +4,10 @@
 
 <VirtualHost *:80>
     ServerName backpan.cpantesters.org
+    ServerAlias backpan-new.cpantesters.org
     ServerAdmin admin@cpantesters.org
-    DocumentRoot /home/ftp/BACKPAN
-    <Directory /home/ftp/BACKPAN>
+    DocumentRoot /home/cpan/BACKPAN
+    <Directory /home/cpan/BACKPAN>
         Options +Indexes
         Require all granted
     </Directory>
@@ -14,7 +15,7 @@
     # Disable CGI scripts
     RemoveHandler .cgi .pl
 
-    ErrorLog /var/www/logs/backpan-error.log
-    CustomLog /var/www/logs/backpan-access.log combined
+    ErrorLog /var/log/apache2/backpan-error.log
+    CustomLog /var/log/apache2/backpan-access.log combined
 </VirtualHost>
 
