--- a/etc/apache2/vhost/cpan.cpantesters.org.conf
+++ b/etc/apache2/vhost/cpan.cpantesters.org.conf
@@ -1,9 +1,10 @@
 
 <VirtualHost *:80>
     ServerName cpan.cpantesters.org
+    ServerAlias cpan-new.cpantesters.org
     ServerAdmin admin@cpantesters.org
-    DocumentRoot /home/ftp/CPAN
-    <Directory /home/ftp/CPAN>
+    DocumentRoot /home/cpan/CPAN
+    <Directory /home/cpan/CPAN>
         Options +Indexes
         Require all granted
     </Directory>
@@ -11,7 +12,7 @@
     # Disable CGI scripts
     RemoveHandler .cgi .pl
 
-    ErrorLog /var/www/logs/cpan-error.log
-    CustomLog /var/www/logs/cpan-access.log combined
+    ErrorLog /var/log/apache2/cpan-error.log
+    CustomLog /var/log/apache2/cpan-access.log combined
 </VirtualHost>
 
