--- a/etc/rsyncd.conf
+++ b/etc/rsyncd.conf
@@ -1,8 +1,8 @@
 
 [CPAN]
-path = /media/web/CPAN
+path = /home/cpan/CPAN
 read only = true
 
 [BACKPAN]
-path = /media/web/BACKPAN
+path = /home/cpan/BACKPAN
 read only = true
