add new api server

--- a/etc/telegraf/http.conf
+++ b/etc/telegraf/http.conf
@@ -22,3 +22,9 @@
     method="GET"
     [inputs.http_response.headers]
         Host = "api.cpantesters.org"
+[[inputs.http_response]]
+    address="http://api-3.cpantesters.org"
+    response_timeout="10s"
+    method="GET"
+    [inputs.http_response.headers]
+        Host = "api.cpantesters.org"
