proxy to replacement legacy report viewer
This viewer is a more efficient Mojolicious daemon that has the same
functionality as the original (perhaps with some different HTML markup,
which nobody should be relying on and I will not be largely sympathetic
to bug reports about).

--- a/etc/apache2/vhost/cpantesters.org.conf
+++ b/etc/apache2/vhost/cpantesters.org.conf
@@ -84,7 +84,7 @@
     RewriteRule ^/home/(\w+)(.html)?$           		/cgi-bin/pages.cgi?act=home-$1 [PT]
     RewriteRule ^/user/(\w+)(.html)?$           		/cgi-bin/pages.cgi?act=user-$1 [PT]
     RewriteRule ^/page/(\w+)(.html)?$           		/cgi-bin/pages.cgi?act=arts-item&name=$1 [PT]
-    RewriteRule ^/cpan/report/([-0-9-Za-z]+)$   		/cgi-bin/view-report.cgi?id=$1&%{QUERY_STRING} [PT]
+    RewriteRule ^/cpan/report/([-0-9-Za-z]+)$   		http://127.0.0.1:6000/legacy/cpan/report/$1 [P]
 
     RewriteRule ^/author/([A-Za-z])/?$          		/cgi-bin/pages.cgi?act=cpan-authors&name=$1 [PT]
     RewriteRule ^/(?:static/)?author/[A-Za-z]/([-\w.]+)\.rss$   /cgi-bin/pages.cgi?act=cpan-arss&name=$1 [PT]
