fix distributions with `+` in their name
Text-Tabs+Wrap is a valid distribution (PAUSE controls what that means,
not CPAN Testers), and it is now correctly passing through our
RewriteRules. It is not correctly handled by Labyrinth, so the
www.cpantesters.org webapp does not show it correctly. It _IS_ correctly
handled by the static JSON files served by Apache, so
matrix.cpantesters.org can show this distribution correctly. That was
acceptable to Aristotle, so it's acceptable to me.

--- a/etc/apache2/vhost/cpantesters.org.conf
+++ b/etc/apache2/vhost/cpantesters.org.conf
@@ -94,11 +94,11 @@
     RewriteRule ^/author/[A-Za-z]/([-\w.]+)$                    /cgi-bin/pages.cgi?act=cpan-author&name=$1 [PT]
 
     RewriteRule ^/distro/([A-Za-z])/?$                          /cgi-bin/pages.cgi?act=cpan-distros&name=$1 [PT]
-    RewriteRule ^/(?:static/)?distro/[A-Za-z]/([-\w.]+)\.rss$   /cgi-bin/pages.cgi?act=cpan-drss&name=$1 [PT]
-    RewriteRule ^/(?:static/)?distro/[A-Za-z]/([-\w.]+)\.ya?ml$ /cgi-bin/pages.cgi?act=cpan-dyml&name=$1 [PT]
-    RewriteRule ^/(distro/[A-Za-z]/[-\w.]+\.(json|js))$         /static/$1 [PT]
-    RewriteRule ^/distro/[A-Za-z]/([-\w.]+)\.html$              /cgi-bin/pages.cgi?act=cpan-distro&name=$1 [PT]
-    RewriteRule ^/distro/[A-Za-z]/([-\w.]+)$                    /cgi-bin/pages.cgi?act=cpan-distro&name=$1 [PT]
+    RewriteRule ^/(?:static/)?distro/[A-Za-z]/([-\w.+]+)\.rss$   /cgi-bin/pages.cgi?act=cpan-drss&name=$1 [PT]
+    RewriteRule ^/(?:static/)?distro/[A-Za-z]/([-\w.+]+)\.ya?ml$ /cgi-bin/pages.cgi?act=cpan-dyml&name=$1 [PT]
+    RewriteRule ^/(distro/[A-Za-z]/[-\w.+]+\.(json|js))$         /static/$1 [PT]
+    RewriteRule ^/distro/[A-Za-z]/([-\w.+]+)\.html$              /cgi-bin/pages.cgi?act=cpan-distro&name=$1 [PT]
+    RewriteRule ^/distro/[A-Za-z]/([-\w.+]+)$                    /cgi-bin/pages.cgi?act=cpan-distro&name=$1 [PT]
 
     RewriteRule ^/cgi-bin/pages.cgi$            		/cgi-bin/pages.cgi?%{QUERY_STRING} [PT]
     RewriteRule ^/cgi-bin/reports-summary.cgi$  		/cgi-bin/reports-summary.cgi?%{QUERY_STRING} [PT]
