add www-1 to monitoring
This bypasses fastly and gives a more accurate result

--- a/etc/telegraf/http.conf
+++ b/etc/telegraf/http.conf
@@ -11,6 +11,10 @@
     response_timeout="10s"
     method="GET"
 [[inputs.http_response]]
+    address="http://www-1.cpantesters.org"
+    response_timeout="60s"
+    method="GET"
+[[inputs.http_response]]
     address="http://api-1.cpantesters.org"
     response_timeout="10s"
     method="GET"
