--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,19 @@ services:
             OAUTH2_GITHUB_SECRET: f368e10f53b0587a0e6753a187a537009113d522
         ports:
             - '3000:3000'
+    backend:
+        image: cpantesters/backend
+        depends_on:
+            - db_tester
+    legacy_metabase:
+        image: cpantesters/api
+        depends_on:
+            - db_tester
+        ports:
+            - '5000:4000'
+        environment:
+            MOJO_CONFIG: ./metabase.conf
+        command: [ 'cpantesters-legacy-metabase', 'daemon', '-l', 'http://*:4000' ]
     deploy:
         build:
             context: .
