add blocked words list
Trigger warning: bigoted slurs

Paths with these words cannot be downloaded from the CPAN or BackPAN
mirrors hosted on cpantesters.org effective immediately. Deal with it.

--- a/etc/apache2/vhost/backpan.cpantesters.org.conf
+++ b/etc/apache2/vhost/backpan.cpantesters.org.conf
@@ -17,5 +17,7 @@
 
     ErrorLog /var/log/apache2/backpan-error.log
     CustomLog /var/log/apache2/backpan-access.log combined
+
+    Include /etc/apache2/include/blocked.conf
 </VirtualHost>
 
