--- a/etc/apache2/vhost/cpan.cpantesters.org.conf
+++ b/etc/apache2/vhost/cpan.cpantesters.org.conf
@@ -14,5 +14,7 @@
 
     ErrorLog /var/log/apache2/cpan-error.log
     CustomLog /var/log/apache2/cpan-access.log combined
+
+    Include /etc/apache2/include/blocked.conf
 </VirtualHost>
 
