--- a/etc/apache2/include/blocked.conf
+++ b/etc/apache2/include/blocked.conf
@@ -1,3 +1,7 @@
+# TRIGGER WARNING:
+# * Racist slurs
+# * Anti-LGBTQ bigotry
+# * Fascist / Nazi language
 
 RewriteEngine On
 RewriteRule "bulld[iy]ke|chol[ao]|faggot|gyp(sy|po)|hitler|jigaboo|kike|mongoloid|mulatto|nazi|[nw]ig(ger|ga|nog)|paki|polack|porchmonkey|raghead|retard|shemale|towelhead|trann(ie|y)|wetback|redskin|sambo|sheen(y|ie)" "-" [NC,F]
