improve blocking regexp
Thanks @karenetheridge for testing this against all existing CPAN dists
and reporting this issue!

--- a/etc/apache2/include/blocked.conf
+++ b/etc/apache2/include/blocked.conf
@@ -4,4 +4,4 @@
 # * Fascist / Nazi language
 
 RewriteEngine On
-RewriteRule "bulld[iy]ke|chol[ao]|faggot|gyp(sy|po)|hitler|jigaboo|kike|mongoloid|mulatto|nazi|[nw]ig(ger|ga|nog)|paki|polack|porchmonkey|raghead|retard|shemale|towelhead|trann(ie|y)|wetback|redskin|sambo|sheen(y|ie)" "-" [NC,F]
+RewriteRule "bulld[iy]ke|\bchol[ao]|faggot|gyp(sy|po)|hitler|jigaboo|kike|mongoloid|mulatto|nazi|[nw]ig(ger|ga|nog)|polack|porchmonkey|raghead|(?<!photonic::)(non)?retard|shemale|towelhead|trann(ie|y)|wetback|redskin|sambo|sheen(y|ie)" "-" [NC,F]
