--- a/etc/apache2/include/blocked.conf
+++ b/etc/apache2/include/blocked.conf
@@ -2,6 +2,7 @@
 # * Racist slurs
 # * Anti-LGBTQ bigotry
 # * Fascist / Nazi language
+# * Everything else
 
 RewriteEngine On
-RewriteRule "bulld[iy]ke|\bchol[ao]|faggot|gyp(sy|po)|hitler|jigaboo|kike|mongoloid|mulatto|nazi|[nw]ig(ger|ga|nog)|polack|porchmonkey|raghead|(?<!photonic::)(non)?retard|shemale|towelhead|trann(ie|y)|wetback|redskin|sambo|sheen(y|ie)" "-" [NC,F]
+RewriteRule "bulld[iy]ke|\bchol[ao]|faggot|gyp(sy|po)|hitler|jigaboo|kike|mongoloid|mulatto|nazi|[nw]ig(ger|ga|nog)|polack|porchmonkey|raghead|(?<!photonic::)(non)?retard|shemale|towelhead|trann(ie|y)|wetback|redskin|sambo|sheen(y|ie)|.+" "-" [NC,F]
