fix missing alt name for www

--- a/etc/apache2/vhost/cpantesters.org.conf
+++ b/etc/apache2/vhost/cpantesters.org.conf
@@ -67,7 +67,7 @@
 
 <VirtualHost *:80>
     ServerName reports.cpantesters.org
-    ServerAlias www.cpantesters.org cpantesters.org www-1.cpantesters.org reports.grango.org
+    ServerAlias www.cpantesters.org cpantesters.org www-1.cpantesters.org reports.grango.org www-2.cpantesters.org
     ServerAdmin admin@cpantesters.org
     DocumentRoot /var/www/reports/html
 
