update cpantesters.org vhost file from manual changes
I made the RewriteRule changes a while back when I killed the legacy
site because the box hosting it had disappeared (cpantesters3).

--- a/etc/apache2/vhost/cpantesters.org.conf
+++ b/etc/apache2/vhost/cpantesters.org.conf
@@ -71,43 +71,19 @@
     ServerAdmin admin@cpantesters.org
     DocumentRoot /var/www/reports/html
 
+	# Added by Scotchiefbaker on 2025-04-30 to try and
+	# help port 8100 NOT to bog down the whole system
+	ProxyTimeout 15
+	# Set connection timeout values
+	<Proxy http://127.0.0.1:8100/>
+		ProxySet connectiontimeout=3 timeout=15
+	</Proxy>
+
     RewriteEngine on
-    RewriteRule ^.*(asp|php)$                   /cgi-bin/pages.cgi?act=error-badcmd [L,R=404]
-    RewriteRule (fckeditor)                     /cgi-bin/pages.cgi?act=error-badcmd [L,R=404]
-
-    RewriteRule ^/(show|dist|distro|author)/?$  / [R=301]
-    RewriteRule ^/show/(\w)(.*)$                /distro/$1/$1$2 [R=301]
-    RewriteRule ^/author/(\w)(\w.*)$            /author/$1/$1$2 [R=301]
-
-    RewriteRule ^/?$                            		/cgi-bin/pages.cgi?act=home-main [PT]
-    RewriteRule ^/index.html$                   		/cgi-bin/pages.cgi?act=home-main [PT]
-    RewriteRule ^/home/(\w+)(.html)?$           		/cgi-bin/pages.cgi?act=home-$1 [PT]
-    RewriteRule ^/user/(\w+)(.html)?$           		/cgi-bin/pages.cgi?act=user-$1 [PT]
-    RewriteRule ^/page/(\w+)(.html)?$           		/cgi-bin/pages.cgi?act=arts-item&name=$1 [PT]
-    RewriteRule ^/cpan/report/([-0-9-Za-z]+)$   		http://127.0.0.1:6000/legacy/cpan/report/$1 [P]
-
-    RewriteRule ^/author/([A-Za-z])/?$          		/cgi-bin/pages.cgi?act=cpan-authors&name=$1 [PT]
-    RewriteRule ^/(?:static/)?author/[A-Za-z]/([-\w.]+)\.rss$   /cgi-bin/pages.cgi?act=cpan-arss&name=$1 [PT]
-    RewriteRule ^/(?:static/)?author/[A-Za-z]/([-\w.]+)\.ya?ml$ /cgi-bin/pages.cgi?act=cpan-ayml&name=$1 [PT]
-    RewriteRule ^/(author/[A-Za-z]/[-\w.]+\.(json|js))$         /static/$1 [PT]
-    RewriteRule ^/author/[A-Za-z]/([-\w.]+)\.html$              /cgi-bin/pages.cgi?act=cpan-author&name=$1 [PT]
-    RewriteRule ^/author/[A-Za-z]/([-\w.]+)$                    /cgi-bin/pages.cgi?act=cpan-author&name=$1 [PT]
-
-    RewriteRule ^/distro/([A-Za-z])/?$                          /cgi-bin/pages.cgi?act=cpan-distros&name=$1 [PT]
-    RewriteRule ^/(?:static/)?distro/[A-Za-z]/([-\w.+]+)\.rss$   /cgi-bin/pages.cgi?act=cpan-drss&name=$1 [PT]
-    RewriteRule ^/(?:static/)?distro/[A-Za-z]/([-\w.+]+)\.ya?ml$ /cgi-bin/pages.cgi?act=cpan-dyml&name=$1 [PT]
-    RewriteRule ^/(distro/[A-Za-z]/[-\w.+]+\.(json|js))$         /static/$1 [PT]
-    RewriteRule ^/distro/[A-Za-z]/([-\w.+]+)\.html$              /cgi-bin/pages.cgi?act=cpan-distro&name=$1 [PT]
-    RewriteRule ^/distro/[A-Za-z]/([-\w.+]+)$                    /cgi-bin/pages.cgi?act=cpan-distro&name=$1 [PT]
-
-    RewriteRule ^/cgi-bin/pages.cgi$            		/cgi-bin/pages.cgi?%{QUERY_STRING} [PT]
-    RewriteRule ^/cgi-bin/reports-summary.cgi$  		/cgi-bin/reports-summary.cgi?%{QUERY_STRING} [PT]
-    RewriteRule ^/cgi-bin/reports-metadata.cgi$  		/cgi-bin/reports-metadata.cgi?%{QUERY_STRING} [PT]
-    RewriteRule ^/cgi-bin/summary.cgi$  			    /cgi-bin/summary.cgi?%{QUERY_STRING} [PT]
-    RewriteRule ^/cgi-bin/(.*)$                 		/cgi-bin/pages.cgi?act=error-badcmd [PT]
-
-    ScriptAlias /cgi-bin/pages.cgi      /var/www/reports/cgi-bin/reports.cgi
-    ScriptAlias /cgi-bin/               /var/www/reports/cgi-bin/
+    RewriteRule ^/distro/.+/(.+)$				/dist/$1 [R,L]
+    RewriteRule ^/author/.+/(.+)$				/author/$1 [R,L]
+    RewriteRule ^/cpan/report/([-0-9-Za-z]+)$	http://127.0.0.1:8100/legacy/cpan/report/$1 [P]
+    RewriteRule ^/(.*)$							http://127.0.0.1:8100/$1 [P]
 
     ErrorLog /var/www/logs/reports-error.log
     ErrorLogFormat "[%t] [%l] %F: %E: [client %a] %M, %-{Referer}i"
